# open-meteo-cast

./: .gitignore  README.md  commit_message.txt  mypy.ini  pyproject.toml
resources/: default_config.yaml
src/open_meteo_cast/: database.py  ensemble.py  formatting.py  main.py  open_meteo_api.py  plotting.py  statistics.py  weather_model.py
tests/: test_database.py  test_ensemble.py  test_main.py  test_open_meteo_api.py  test_statistics.py  test_weather_model.py
