[tool.poetry]
name = "open-meteo-cast"
version = "0.0.1"
description = "Automated weather forecasting system using ensemble statistics from global models via Open-Meteo"
authors = ["Maximiliano Bidegain"]

readme = "README.md"
packages = [{include = "open_meteo_cast", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.13"
pyyaml = ">=6.0.2,<7.0.0"
requests = ">=2.32.4,<3.0.0"

[tool.poetry.scripts]
open-meteo-cast = "open_meteo_cast.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
