[tool.poetry]
name = "open-meteo-cast"
version = "0.2.0"
description = "Automated weather forecasting system using ensemble statistics from global models via Open-Meteo"
authors = ["Maximiliano Bidegain"]

readme = "README.md"
packages = [{include = "open_meteo_cast", from = "src"}]
include = ["resources"]

[tool.poetry.dependencies]
python = ">=3.13"
pyyaml = ">=6.0.2,<7.0.0"
requests = ">=2.32.4,<3.0.0"
numpy = "^2.3.1"
pandas = "^2.3.1"
requests-cache = "^1.2.1"
retry-requests = "^2.0.0"
qh3 = "^1.5.3"
jh2 = "^5.0.9"
h11 = "^0.16.0"
flatbuffers = "^25.2.10"
urllib3-future = "^2.13.900"
wassima = "1.2.1"
openmeteo-requests = "^1.5.0"

[tool.poetry.scripts]
open-meteo-cast = "open_meteo_cast.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-mock = "^3.14.1"
ruff = "^0.12.2"
mypy = "^1.16.1"
types-pyyaml = "^6.0.12.20250516"
types-requests = "^2.32.4.20250611"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
